[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Object.png" type="Texture" id=1]
[ext_resource path="res://Assets/ObjectOverlay.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Object.gd" type="Script" id=3]
[ext_resource path="res://src/Interface/TextPanel.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0347, 16.1928 )

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WhiteOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "light_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("WhiteOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.8756, 16.6133 )

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="WhiteOverlay" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 2 )
anims/light_up = SubResource( 3 )

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
modulate = Color( 0.0588235, 0.92549, 0.968627, 1 )
shape = SubResource( 4 )

[node name="TextPanel" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="hide" from="TextPanel" to="." method="_on_TextPanel_hide"]
